--- a/index.html
+++ b/index.html
@@ -33,10 +33,26 @@
 
     <section class="features">
         <div class="feature-item"></div>
-        <h2>Notification!</h2>
-
-        
+        <h2>Notifications!</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam eos odit iusto numquam provident magni aut tempora quasi sint eius omnis fugit, maxime molestiae eaque maiores error perferendis sequi suscipit!</p>
+        <div class="feature-item"></div>
+        <h2>Multiple Plants!</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam eos odit iusto numquam provident magni aut tempora quasi sint eius omnis fugit, maxime molestiae eaque maiores error perferendis sequi suscipit!</p>
+        <div class="feature-item"></div>
+        <h2>Share Photos!</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam eos odit iusto numquam provident magni aut tempora quasi sint eius omnis fugit, maxime molestiae eaque maiores error perferendis sequi suscipit!</p>
+        <div class="feature-item"></div>
+        <h2>Community!</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam eos odit iusto numquam provident magni aut tempora quasi sint eius omnis fugit, maxime molestiae eaque maiores error perferendis sequi suscipit!</p>
+        <div class="feature-item"></div>
     </section>
-</body>
 
+    <footer>
+        <div class="footer-container">
+        <a href="#">DOWNLOAD TODAY!</a>
+        <h2>Water My Plant!&copy;</h2>
+        </div>
+    </footer>
+
+</body>
 </html>
