fixing about page

--- a/about/about.html
+++ b/about/about.html
@@ -3,16 +3,17 @@
 
 <head>
     <title>Water My Plants!</title>
-    <link rel="stylesheet" type="text/css" href="./CSS/index.css" />
+    <link rel="stylesheet" type="text/css" href="../css/index.css" />
+    <script defer="defer" src="./components/header/header.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
 </head>
 
 <header>
     <nav>
-        <a href="../index.html"><img src="/assets/logo.png" alt="Water My Plants"></a>
-        <a href="#">About Us</a>
-        <button class="log-in">
-            <a href='#'>LOG IN</a>
-        </button>
+        <img src="/assets/logo.png" alt="Water My Plants" class="logo">
+        <img src="/assets/menu.png" class="menu">
+        <a href="about/about.html" class="nav-item">About Us</a>
+        <a href='#' class="nav-item">Log In</a>  
     </nav>
 </header>
 
@@ -20,17 +21,15 @@
     <div class="bar">
         <div class="container">
             <div class="container-left">
-                <h1>TAG LINE</h1>
-                <p>Quick Description Don't fiddle with it all day. Automatically, all of these beautiful, beautiful
-                    things will happen. If we're going to have animals around we all have to be concerned about them and
-                    take care of them. Let's have a little bit of fun today. There isn't a rule. You just practice and
-                    find out which way works best for you.</p>
+                <h1>Having Trouble Keeping Your Plants Alive?</h1>
+                <h2>The app that reminds you to water your plants!</h2>
+                <p>It is easy in our busy lifestyles to forget the little things, but with our app we will make sure that your plants are always kept up with. With Water My Plant! the days of worrying about when to water are over!</p>
                 <div class="container-right">
-                    <img src="/assets/iphone.png" alt="iphone screenshot">
+                    <img src="/assets/iphone.png" alt="iphone screenshot" class="phone">
                 </div>
             </div>
         </div>
     </div>
-</body>
 
+</body>
 </html>
