added image placeholders

--- a/about/about.html
+++ b/about/about.html
@@ -21,15 +21,61 @@
     <div class="bar">
         <div class="container">
             <div class="container-left">
-                <h1>Having Trouble Keeping Your Plants Alive?</h1>
-                <h2>The app that reminds you to water your plants!</h2>
-                <p>It is easy in our busy lifestyles to forget the little things, but with our app we will make sure that your plants are always kept up with. With Water My Plant! the days of worrying about when to water are over!</p>
+                <h1>ABOUT US</h1>
+                <p>Meet the team that brought you Water My Plant!</p>
                 <div class="container-right">
                     <img src="/assets/iphone.png" alt="iphone screenshot" class="phone">
                 </div>
             </div>
         </div>
     </div>
+
+    <section class="about-container">
+        
+        <div class="about-content">
+        <a href="#">McKay Wrigley</a>
+        <p>Back-End Developer</p>
+        <img src="../assets/mckay.jfif" class="about-img">
+        </div>
+
+        <div class="about-content">
+        <a href="#">Pearl Paris</a>
+        <p>Front-End Developer</p>
+        <img src="../assets/pearl.jfif" class="about-img">
+        </div>
+
+        <div class="about-content">
+        <a href="#">Aaron Harbaugh</a>
+        <p>Front-End Developer</p>
+        <img src="../assets/mckay.jfif" class="about-img">
+        </div>
+
+        <div class="about-content">
+        <a href="#">Ty Lippe</a>
+        <p>UI Developer</p>
+        <img src="../assets/profile.jpg" class="about-img">
+        </div>
+
+        <div class="about-content">
+        <a href="#">Andy Dillon</a>
+        <p>UI Developer</p>
+        <img src="../assets/mckay.jfif" class="about-img">
+        </div>
+
+        <div class="about-content">
+        <a href="#">York Cook</a>
+        <p>UI Developer</p>
+        <img src="../assets/mckay.jfif" class="about-img">
+        </div>
+    
+    </section>
+
+    <footer>
+        <div class="footer-container">
+        <a href="#">DOWNLOAD TODAY!</a>
+        <h2>Water My Plant!&copy;</h2>
+        </div>
+    </footer>
 
 </body>
 </html>
