desktop header layout complete

--- a/about/about.html
+++ b/about/about.html
@@ -9,11 +9,15 @@
 </head>
 
 <header>
-    <nav>
-        <img src="/assets/logo.png" alt="Water My Plants" class="logo">
+    <nav>   
+        <div class="logo-link">
+        <a href="../index.html"><img src="/assets/logo.png" alt="Water My Plants" class="logo"></a>
+        </div>
         <img src="/assets/menu.png" class="menu">
-        <a href="about/about.html" class="nav-item">About Us</a>
+        <div class="header-links">
+        <a href="#" class="nav-item">About Us</a>
         <a href='#' class="nav-item">Log In</a>  
+        </div>
     </nav>
 </header>
 
@@ -33,13 +37,13 @@
     <section class="about-container">
         
         <div class="about-content">
-        <a href="#">McKay Wrigley</a>
+        <a href="https://github.com/mckaywrigley">McKay Wrigley</a>
         <p>Back-End Developer</p>
         <img src="../assets/mckay.jfif" class="about-img">
         </div>
 
         <div class="about-content">
-        <a href="#">Pearl Paris</a>
+        <a href="https://github.com/coriagogo">Pearl Paris</a>
         <p>Front-End Developer</p>
         <img src="../assets/pearl.jfif" class="about-img">
         </div>
@@ -51,28 +55,28 @@
         </div>
 
         <div class="about-content">
-        <a href="#">Ty Lippe</a>
+        <a href="https://github.com/TyLippe">Ty Lippe</a>
         <p>UI Developer</p>
         <img src="../assets/profile.jpg" class="about-img">
         </div>
 
         <div class="about-content">
-        <a href="#">Andy Dillon</a>
+        <a href="https://github.com/SirAndrewDillon">Andy Dillon</a>
         <p>UI Developer</p>
         <img src="../assets/mckay.jfif" class="about-img">
         </div>
 
         <div class="about-content">
-        <a href="#">York Cook</a>
+        <a href="https://github.com/yorkcook">York Cook</a>
         <p>UI Developer</p>
-        <img src="../assets/mckay.jfif" class="about-img">
+        <img src="../assets/York-Cook.jpg" class="about-img">
         </div>
     
     </section>
 
     <footer>
         <div class="footer-container">
-        <a href="#">DOWNLOAD TODAY!</a>
+        <a href="https://water-my-plants-lambda.herokuapp.com/">DOWNLOAD TODAY!</a>
         <h2>Water My Plant!&copy;</h2>
         </div>
     </footer>
