--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 </head>
 
 <header>
-    <nav>
-        <img src="/assets/logo.png" alt="Water My Plants" class="logo">
-        <img src="/assets/menu.png" class="menu">
-        <a href="about/about.html" class="nav-item">About Us</a>
-        <a href='#' class="nav-item">Log In</a>  
-    </nav>
-</header>
+        <nav>   
+            <div class="logo-link">
+            <a href="#"><img src="/assets/logo.png" alt="Water My Plants" class="logo"></a>
+            </div>
+            <img src="/assets/menu.png" class="menu">
+            <div class="header-links">
+            <a href="./about/about.html" class="nav-item">About Us</a>
+            <a href='#' class="nav-item">Log In</a>  
+            </div>
+        </nav>
+    </header>
 
 <body>
     <div class="bar">
@@ -24,9 +28,9 @@
                 <h1>Having Trouble Keeping Your Plants Alive?</h1>
                 <h2>The app that reminds you to water your plants!</h2>
                 <p>It is easy in our busy lifestyles to forget the little things, but with our app we will make sure that your plants are always kept up with. With Water My Plant! the days of worrying about when to water are over!</p>
-                <div class="container-right">
-                    <img src="/assets/iphone.png" alt="iphone screenshot" class="phone">
-                </div>
+            </div>
+            <div class="container-right">
+                <img src="/assets/iphone.png" alt="iphone screenshot" class="phone">
             </div>
         </div>
     </div>
@@ -49,7 +53,7 @@
 
     <footer>
         <div class="footer-container">
-        <a href="#">DOWNLOAD TODAY!</a>
+        <a href="https://water-my-plants-lambda.herokuapp.com/">DOWNLOAD TODAY!</a>
         <h2>Water My Plant!&copy;</h2>
         </div>
     </footer>
