--- a/about/about.html
+++ b/about/about.html
@@ -23,13 +23,10 @@
 
 <body>
     <div class="bar">
-        <div class="container">
-            <div class="container-left">
+        <div class="about-container">
+            <div class="about-text">
                 <h1>ABOUT US</h1>
                 <p>Meet the team that brought you Water My Plant!</p>
-                <div class="container-right">
-                    <img src="/assets/iphone.png" alt="iphone screenshot" class="phone">
-                </div>
             </div>
         </div>
     </div>
