--- a/about/about.html
+++ b/about/about.html
@@ -33,6 +33,7 @@
 
     <section class="about-container">
         
+        <div class="about-top">
         <div class="about-content">
         <a href="https://github.com/mckaywrigley">McKay Wrigley</a>
         <p>Back-End Developer</p>
@@ -44,7 +45,9 @@
         <p>Front-End Developer</p>
         <img src="../assets/pearl.jfif" class="about-img">
         </div>
+        </div>
 
+        <div class="about-mid">
         <div class="about-content">
         <a href="#">Aaron Harbaugh</a>
         <p>Front-End Developer</p>
@@ -56,7 +59,9 @@
         <p>UI Developer</p>
         <img src="../assets/profile.jpg" class="about-img">
         </div>
+        </div>
 
+        <div class="about-bottom">
         <div class="about-content">
         <a href="https://github.com/SirAndrewDillon">Andy Dillon</a>
         <p>UI Developer</p>
@@ -67,6 +72,7 @@
         <a href="https://github.com/yorkcook">York Cook</a>
         <p>UI Developer</p>
         <img src="../assets/York-Cook.jpg" class="about-img">
+        </div>
         </div>
     
     </section>
