desktop layout complete

--- a/about/about.html
+++ b/about/about.html
@@ -51,7 +51,7 @@
         <div class="about-content">
         <a href="#">Aaron Harbaugh</a>
         <p>Front-End Developer</p>
-        <img src="../assets/mckay.jfif" class="about-img">
+        <img src="../assets/aaron.png" class="about-img">
         </div>
 
         <div class="about-content">
@@ -65,7 +65,7 @@
         <div class="about-content">
         <a href="https://github.com/SirAndrewDillon">Andy Dillon</a>
         <p>UI Developer</p>
-        <img src="../assets/mckay.jfif" class="about-img">
+        <img src="../assets/andy.png" class="about-img">
         </div>
 
         <div class="about-content">
