--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
     <section class="features">
         <div class="feature-item"></div>
         <h2>Notifications!</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam eos odit iusto numquam provident magni aut tempora quasi sint eius omnis fugit, maxime molestiae eaque maiores error perferendis sequi suscipit!</p>
+        <p>Recieve a notification via text when the time comes to water your plant. With personalized notifications you will always be aware of what plant needs its water and when it is needed! No more guessing!</p>
         <div class="feature-item"></div>
         <h2>Multiple Plants!</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam eos odit iusto numquam provident magni aut tempora quasi sint eius omnis fugit, maxime molestiae eaque maiores error perferendis sequi suscipit!</p>
+        <p>Have more than one plant? No problem! With an account with Water My Plant! you will be able to add plants to your garden and set up individual notifications for each and every one!</p>
         <div class="feature-item"></div>
         <h2>Share Photos!</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam eos odit iusto numquam provident magni aut tempora quasi sint eius omnis fugit, maxime molestiae eaque maiores error perferendis sequi suscipit!</p>
+        <p>Don't let all that hard work go to waste! Go ahead and take some photos of your plants progress! With Water My Plant! you will be able to take photos for each of your plants in your garden!</p>
         <div class="feature-item"></div>
         <h2>Community!</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam eos odit iusto numquam provident magni aut tempora quasi sint eius omnis fugit, maxime molestiae eaque maiores error perferendis sequi suscipit!</p>
+        <p>Have a question about your plants? Well with your membership you will also have access to the community of users, where you can ask questions, share photos and meet a vast community of people with the same gardeing interest as you!</p>
         <div class="feature-item"></div>
     </section>
 
