--- a/about/about.html
+++ b/about/about.html
@@ -16,7 +16,7 @@
         <img src="/assets/menu.png" class="menu">
         <div class="header-links">
         <a href="#" class="nav-item">About Us</a>
-        <a href='#' class="nav-item">Log In</a>  
+        <a href='https://water-my-plants-bw.netlify.com/' class="nav-item">Download</a>  
         </div>
     </nav>
 </header>
@@ -79,7 +79,7 @@
 
     <footer>
         <div class="footer-container">
-        <a href="https://water-my-plants-lambda.herokuapp.com/">DOWNLOAD TODAY!</a>
+        <a href="https://water-my-plants-bw.netlify.com/">DOWNLOAD TODAY!</a>
         <h2>Water My Plant!&copy;</h2>
         </div>
     </footer>
