--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="/assets/menu.png" class="menu">
             <div class="header-links">
             <a href="./about/about.html" class="nav-item">About Us</a>
-            <a href='https://water-my-plants-bw.netlify.com/' class="nav-item">Download</a>  
+            <a href= 'https://water-my-plants-bw.netlify.com/login' class="nav-item">Log In</a>  
             </div>
         </nav>
     </header>
@@ -53,7 +53,7 @@
 
     <footer>
         <div class="footer-container">
-        <a href='https://water-my-plants-bw.netlify.com/'>DOWNLOAD TODAY!</a>
+        <a href='https://water-my-plants-bw.netlify.com/login'>WATER TODAY!</a>
         <h2>Water My Plant!&copy;</h2>
         </div>
     </footer>
