--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <script defer="defer" src="./components/header/header.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 
 <header>
-        <nav>   
+        <nav class="topnav">   
             <div class="logo-link">
             <a href="#"><img src="/assets/logo.png" alt="Water My Plants" class="logo"></a>
             </div>
-            <img src="/assets/menu.png" class="menu">
-            <div class="header-links">
+            <i class="fas fa-bars fa-2x icon"></i>
+            <div class="header-links dropdown">
             <a href="./about/about.html" class="nav-item">About Us</a>
             <a href= 'https://water-my-plants-bw.netlify.com/login' class="nav-item">Log In</a>  
             </div>
