--- a/about/about.html
+++ b/about/about.html
@@ -12,17 +12,22 @@
 <header>
         <nav class="topnav">   
             <div class="logo-link">
-            <a href="../index.html"><img src="/assets/logo.png" alt="Water My Plants" class="logo"></a>
+            <a href="../index.html"><img src="/assets/logo2.png" alt="Water My Plants" class="logo"></a>
             </div>
             <i class="fas fa-bars fa-2x icon"></i>
-            <div class="header-links dropdown">
-            <a href="./about/about.html" class="nav-item">About Us</a>
+            <div class="header-links">
+            <a href="#" class="nav-item">About Us</a>
             <a href= 'https://water-my-plants-bw.netlify.com/login' class="nav-item">Log In</a>  
             </div>
         </nav>
     </header>
 
 <body>
+    <section class="dropdown-menu">
+            <a href="#" class="dd-item">About Us</a>
+            <a href= 'https://water-my-plants-bw.netlify.com/login' class="dd-item">Log In</a>  
+    </section>
+
     <div class="bar">
         <div class="about-container">
             <div class="about-text">
