--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <header>
         <nav class="topnav">   
             <div class="logo-link">
-            <a href="#"><img src="/assets/logo.png" alt="Water My Plants" class="logo"></a>
+            <a href="#"><img src="/assets/logo2.png" alt="Water My Plants" class="logo"></a>
             </div>
             <i class="fas fa-bars fa-2x icon"></i>
-            <div class="header-links dropdown">
+            <div class="header-links">
             <a href="./about/about.html" class="nav-item">About Us</a>
             <a href= 'https://water-my-plants-bw.netlify.com/login' class="nav-item">Log In</a>  
             </div>
@@ -23,6 +23,11 @@
     </header>
 
 <body>
+    <section class="dropdown-menu">
+            <a href="./about/about.html" class="dd-item">About Us</a>
+            <a href= 'https://water-my-plants-bw.netlify.com/login' class="dd-item">Log In</a>  
+    </section>
+
     <div class="bar">
         <div class="container">
             <div class="container-left">
