added Andy site link

--- a/about/about.html
+++ b/about/about.html
@@ -70,7 +70,7 @@
         <div class="about-bottom">
         <div class="about-content">
         <a href="https://github.com/SirAndrewDillon">Andy Dillon</a>
-        <p>UI Developer</p>
+        <a href="https://unruffled-fermi-dd92d4.netlify.com/" class="ui-site">UI Developer</a>
         <img src="../assets/andy.png" class="about-img">
         </div>
 
