--- a/about/about.html
+++ b/about/about.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>Water My Plants!</title>
-    <link rel="stylesheet" type="text/css" href="../css/index.css" />
-    <script defer="defer" src="../components/header/header.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-</head>
+        <head>
+                <title>Water My Plants!</title>
+                <meta name="viewport" content="width=device-width">
+                <link rel="stylesheet" type="text/css" href="../css/index.css" />
+                <script defer="defer" src="../components/header/header.js"></script>
+                <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
+                <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+            </head>
 
 <header>
         <nav class="topnav">   
