--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Water My Plants!</title>
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <script defer="defer" src="./components/header/header.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
