added link for york

--- a/about/about.html
+++ b/about/about.html
@@ -77,7 +77,7 @@
 
         <div class="about-content">
         <a href="https://github.com/yorkcook">York Cook</a>
-        <p>UI Developer</p>
+        <a href="https://vigilant-lamarr-60f26b.netlify.com/" class="ui-site">UI Developer</a>
         <img src="../assets/York-Cook.jpg" class="about-img">
         </div>
         </div>
